# posttrain-lab

./: AGENTS.md  Makefile  README.md  pyproject.toml
configs/audit/: gsm8k_qwen3_4b_prompt_sweep.yaml
configs/e2e/: toy_math_posttraining.yaml
configs/eval/: baseline.yaml
configs/rlvr/: frontier_grpo_smoke.yaml  frontier_prompt_audit.yaml  grpo_smoke.yaml  gsm8k_frontier_audit_thinking_false.yaml  gsm8k_frontier_audit_thinking_true.yaml  gsm8k_frontier_scout_thinking_false.yaml  gsm8k_frontier_scout_thinking_true.yaml  math_1k_grpo.yaml  qwen25_math_1_5b_dapo_grpo_one_epoch_8gpu.yaml  qwen25_math_1_5b_dapo_grpo_paperish.yaml  qwen3_0_6b_grpo_smoke.yaml  toy_math_grpo.yaml
configs/sft/: openr1_math_1k.yaml  openr1_math_1k_len8192.yaml  openr1_math_format_repair_1k.yaml  overfit32.yaml  qwen3_0_6b_overfit32.yaml  qwen3_4b_openr1_cn_math_sft.yaml  qwen3_4b_openr1_format_repair_tiny.yaml  qwen3_4b_sympy_boxed_full.yaml  qwen3_4b_sympy_boxed_smoke.yaml  smoke_1k.yaml
configs/verl/: qwen25_math_1_5b_dapo_grpo_smoke.sh
docs/knowledge/: data_card.md  eval_card.md  experiment_lessons.md  experiment_log.md  failure_taxonomy.md  model_choices.md  project_overview.md  (+3 more)
scripts/: analyze_sft_recall.py
tests/: test_dapo_math_conversion.py  test_data_schema.py  test_e2e_smoke.py  test_eval_runner.py  test_gsm8k_conversion.py  test_import.py  test_math_dataset_eval.py  test_math_reward.py  test_math_sft_curation.py  test_openr1_level_filter.py  test_rollout_audit.py  test_target_policy_filter.py  test_train_grpo_config.py  test_train_sft_config.py  test_verl_grpo_config.py
(+61 files in other folders)
