[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "posttrain-lab"
version = "0.1.0"
description = "Post-training lab scaffolding for SFT and RLVR experiments."
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7",
]
data = [
    "datasets>=2",
    "latex2sympy2>=1.9.1",
]
reward = [
    "latex2sympy2>=1.9.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
